# nexign_ml_comp

./: .gitignore  README.md  app.py  download_qwen2.py  download_qwen3.py  graph_result.md  mlflow.db  pyproject.toml  table_result.md
Deploy/: .env  .env.example  README.md  deploy-cloud.md  docker-compose.yml
Deploy/DB/: Dockerfile
Deploy/ML-container/: .dockerignore  Dockerfile  README.md
Deploy/adapter/: Dockerfile  readme.md
Deploy/backend/: .dockerignore  Dockerfile  README.md
Deploy/frontend/: .dockerignore  Dockerfile  README.md
app/: app.py  generator.py  processor.py
data/: example.md  metadata.jsonl  train.jsonl  val.jsonl
data2/: ganerate_arrows.py  generate_blocks.py
docs/: architecture_plan.md  checkpoint.md  task.md
hybrid_model_arrows_blocks/: llm.py  main.py
hybrid_model_arrows_blocks/arrows/: check_model.py  convert_arrows_to_yolo.py  dataset.yaml  train_arrows.py
hybrid_model_arrows_blocks/blocks/: convert_blocks_to_yolo.py  dataset.yaml  train.py
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
model_vlm_qwen2/: config.yaml  dataset.py  inference.py  train.py
model_vlm_qwen2/weights/: adapter_config.json  processor_config.json  tokenizer_config.json
model_vlm_qwen3/: dataset.py  inference.py  train.py  validate_qwen3.py
model_vlm_qwen3/weights/: README.md  adapter_config.json
prompts/: system_prompt.md
raw_data/Диаграммы/: Reagent_диаграммы.rar  Архив.7z
scripts/: generate_data.py  generate_data_bpmn.py  make_examples.py  process_real_data.py  split_data.py  validate.py
train_data_generator/: bpmn-js.md  task.md
train_data_generator/LLM-gen/: README.md  config.yaml  main.py  package-lock.json  requirements.txt  system_prompt.md
train_data_generator/basic/: README.md  config.yaml  main.py  requirements.txt
train_data_generator/transformer/: CHANGELOG.md  INSTALL.md  MIGRATION.md  QUICKSTART.md  README.md  config.yaml  main.py  (+2 more)
(+3179 files in other folders)
