[project]
name = "nexign-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "altair<5",
    "bpmn-python>=0.0.18",
    "easyocr>=1.7.2",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "graphviz>=0.21",
    "huggingface-hub>=1.3.5",
    "levenshtein>=0.27.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.1",
    "onnx>=1.17.0",
    "onnxslim>=0.1.83",
    "openai>=2.16.0",
    "opencv-python>=4.13.0.90",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "pillow>=12.1.0",
    "protobuf==3.20.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "qwen-vl-utils>=0.0.14",
    "reportlab>=4.4.9",
    "scikit-learn>=1.8.0",
    "streamlit>=1.19.0",
    "svglib>=1.6.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "ultralytics>=8.4.9",
    "unicorn>=2.1.4",
    "uvicorn>=0.40.0",
]
